feat: update layout

--- a/Lends/Views/Games/Delete.cshtml
+++ b/Lends/Views/Games/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Producer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Producer.Id)
+            @Html.DisplayFor(model => model.Producer.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MinPlayers)
