--- a/Lends/Views/Games/Index.cshtml
+++ b/Lends/Views/Games/Index.cshtml
@@ -55,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Producer.Id)
+                @Html.DisplayFor(modelItem => item.Producer.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MinPlayers)
