--- a/Lends/Views/Games/Details.cshtml
+++ b/Lends/Views/Games/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Producer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Producer.Id)
+            @Html.DisplayFor(model => model.Producer.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MinPlayers)
