--- a/Lends/Views/Rents/Delete.cshtml
+++ b/Lends/Views/Rents/Delete.cshtml
@@ -15,13 +15,13 @@
             @Html.DisplayNameFor(model => model.Game)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Game.Id)
+            @Html.DisplayFor(model => model.Game.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.Id)
+            @Html.DisplayFor(model => model.Client.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RentalDate)
