--- a/Lends/Views/Rents/Details.cshtml
+++ b/Lends/Views/Rents/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.Game)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Game.Id)
+            @Html.DisplayFor(model => model.Game.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.Id)
+            @Html.DisplayFor(model => model.Client.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RentalDate)
