--- a/Lends/Views/Rents/Create.cshtml
+++ b/Lends/Views/Rents/Create.cshtml
@@ -14,6 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Rent.GameId" class="control-label"></label>
+
                 <select asp-for="Rent.GameId" class="form-control"
                     asp-items="@(new SelectList(Model.Games, "Id", "Name"))">
                 </select>
@@ -55,7 +56,8 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/lib/select2/js/select2.full.min.js"></script>
-    <script src="~/js/select2.js"></script>
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        await Html.RenderPartialAsync("_Select2Bootstrap");
+    }
 }
