--- a/Lends/Views/Games/Index.cshtml
+++ b/Lends/Views/Games/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Lends.Models.Game>
+@using Lends.Models.Enums
 
 @{
     ViewData["Title"] = "Jogos";
@@ -9,6 +10,20 @@
 <p>
     <a asp-action="Create">Adicionar novo jogo</a>
 </p>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            <select name="statusSearch">
+                <option value="" disabled selected>Status</option>
+                @foreach (var item in @Html.GetEnumSelectList<GameStatus>()){
+                    <option value=@item.Value>@item.Text</option>
+                    }
+            </select>
+            <input type="submit" value="Buscar" class="btn btn-default" /> |
+            <a asp-action="Index">Listar todos os jogos</a>
+        </p>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
