--- a/Lends/Views/Rents/Create.cshtml
+++ b/Lends/Views/Rents/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Lends.Models.ViewModel.RentFormViewModel
 
+
 @{
     ViewData["Title"] = "Criar";
 }
@@ -14,16 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Rent.GameId" class="control-label"></label>
-
                 <select asp-for="Rent.GameId" class="form-control"
                     asp-items="@(new SelectList(Model.Games, "Id", "Name"))">
                 </select>
             </div>
             <div class="form-group">
+
+                <link rel="stylesheet" href="~/css/select2.css" />
                 <label asp-for="Rent.ClientId" class="control-label"></label>
-                <link href="~/lib/select2-bootstrap-css/select2-bootstrap.css" rel="stylesheet" />
-                <!-- select2-bootstrap4-theme -->
-                <link href="https://raw.githack.com/ttskch/select2-bootstrap4-theme/master/dist/select2-bootstrap4.css" rel="stylesheet">
                 <select asp-for="Rent.ClientId" data-live-search="true" data-live-search-style="startsWith" 
                     class="form-control" id="simpleSelect2" 
                     asp-items="@(new SelectList(Model.Clients, "Id", "Name"))">
