--- a/Lends/Views/Shared/_Layout.cshtml
+++ b/Lends/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+    <link href="~/lib/select2-bootstrap-css/select2-bootstrap.css" rel="stylesheet" />
     <!-- select2-bootstrap4-theme -->
+    <link rel="stylesheet" href="~/css/select2.css" />
     <link href="https://raw.githack.com/ttskch/select2-bootstrap4-theme/master/dist/select2-bootstrap4.css" rel="stylesheet">
 </head>
 <body>
