--- a/Lends/Views/Rents/Create.cshtml
+++ b/Lends/Views/Rents/Create.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rent.Price" class="control-label"></label>
-                <input asp-for="Rent.Price" class="form-control" />
+                <input asp-for="Rent.Price" class="form-control" type="text" />
                 <span asp-validation-for="Rent.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
