--- a/Lends/Views/Rents/Create.cshtml
+++ b/Lends/Views/Rents/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Lends.Models.ViewModel.RentFormViewModel
+﻿@using Lends.Models.Enums
+@model Lends.Models.ViewModel.RentFormViewModel
 
 
 @{
@@ -16,7 +17,7 @@
             <div class="form-group">
                 <label asp-for="Rent.GameId" class="control-label"></label>
                 <select asp-for="Rent.GameId" class="form-control"
-                    asp-items="@(new SelectList(Model.Games, "Id", "Name"))">
+                    asp-items="@(new SelectList(Model.Games.Where(g => g.Status == GameStatus.AVAILABLE), "Id", "Name"))">
                 </select>
             </div>
             <div class="form-group">
