fix: small fixes

--- a/Lends/Views/Games/Index.cshtml
+++ b/Lends/Views/Games/Index.cshtml
@@ -85,7 +85,7 @@
                 @Html.DisplayFor(modelItem => item.Age)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RentPrice)
+                R$ @Html.DisplayFor(modelItem => item.RentPrice)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Image)
