feat: display game image

--- a/Lends/Views/Games/Details.cshtml
+++ b/Lends/Views/Games/Details.cshtml
@@ -9,6 +9,7 @@
 <div>
     <h4>Game</h4>
     <hr />
+    <img src=@Model.Image width="150px" class="detailImage" />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -61,9 +62,6 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
