--- a/Lends/Views/Shared/_Layout.cshtml
+++ b/Lends/Views/Shared/_Layout.cshtml
@@ -14,26 +14,28 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-lends">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Lends</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="https://lends.com.br/wp-content/uploads/2021/01/logo-cor-ext.png" />
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse" id="navbarColor02">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Producers" asp-action="Index">Fabricantes</a>
+                            <a class="nav-link" asp-area="" asp-controller="Producers" asp-action="Index">Fabricantes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Index">Clientes</a>
+                            <a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Games" asp-action="Index">Jogos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Games" asp-action="Index">Jogos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Rents" asp-action="Index">Aluguéis</a>
+                            <a class="nav-link" asp-area="" asp-controller="Rents" asp-action="Index">Aluguéis</a>
                         </li>
                     </ul>
                 </div>
