--- a/Lends/wwwroot/css/site.css
+++ b/Lends/wwwroot/css/site.css
@@ -59,8 +59,8 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 .footer {
   position: absolute;
@@ -68,4 +68,45 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.nav-lends {
+    background-image: -webkit-linear-gradient(right, #ff4951, #ffe5b0) !important;
+}
+
+.table {
+    border-spacing: 0 15px;
+    border-collapse: separate;
+}
+
+.table thead tr th,
+.table thead tr td,
+.table tbody tr th,
+.table tbody tr td {
+    vertical-align: middle;
+    border: none;
+}
+
+.table thead tr th:nth-last-child(1),
+.table thead tr td:nth-last-child(1),
+.table tbody tr th:nth-last-child(1),
+.table tbody tr td:nth-last-child(1) {
+    text-align: center;
+}
+
+.table tbody tr {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.table tbody tr td {
+    background: #fff;
+}
+
+.table tbody tr td:nth-child(1) {
+    border-radius: 5px 0 0 5px;
+}
+
+.table tbody tr td:nth-last-child(1) {
+    border-radius: 0 5px 5px 0;
 }
