--- a/Lends/Views/Shared/_Layout.cshtml
+++ b/Lends/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <!-- select2-bootstrap4-theme -->
     <link rel="stylesheet" href="~/css/select2.css" />
     <link href="https://raw.githack.com/ttskch/select2-bootstrap4-theme/master/dist/select2-bootstrap4.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
