--- a/Lends/wwwroot/css/site.css
+++ b/Lends/wwwroot/css/site.css
@@ -110,3 +110,33 @@ body {
 .table tbody tr td:nth-last-child(1) {
     border-radius: 0 5px 5px 0;
 }
+
+.h1-subcategories {
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 500;
+    color: #fbbc6b;
+}
+
+.jumbotron {
+    margin-top: 2rem;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 15%);
+}
+
+.add-producer {
+    font-size: 12px;
+}
+
+.btn-primary {
+    background-color: #ff5169;
+    border-color: #ff5169;
+    font-weight: 500;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 30%);
+}
+
+.btn-primary:hover {
+    background-color: #ffce67;
+    border-color: #ffce67;
+    font-weight: 500;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 30%);
+}
