--- a/Lends/Views/Producers/Delete.cshtml
+++ b/Lends/Views/Producers/Delete.cshtml
@@ -4,30 +4,33 @@
     ViewData["Title"] = "Deletar";
 }
 
-<h1>Deletar</h1>
+<div class="jumbotron jumbotron-form">
 
-<h3>Você tem certeza que quer deletar esse fabricante?</h3>
-<div>
-    <h4>Fabricante</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cnpj)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cnpj)
-        </dd>
+    <h1 class="h1-subcategories">Deletar Fabricante</h1>
+
+    <h4 class="delete-text">Você tem certeza que quer deletar esse fabricante?</h4>
+    <dl>
+        <div class="details-list">
+            <dt class = "col-sm-6">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class = "col-sm-6">
+                @Html.DisplayNameFor(model => model.Cnpj)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Cnpj)
+            </dd>
+        </div>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-outline-danger button-size" />
+        <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
     </form>
 </div>
