--- a/Lends/Views/Producers/Details.cshtml
+++ b/Lends/Views/Producers/Details.cshtml
@@ -4,27 +4,29 @@
     ViewData["Title"] = "Informações";
 }
 
-<h1>Informações</h1>
+<div class="jumbotron jumbotron-form">
 
-<div>
-    <h4>Fabricante</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cnpj)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cnpj)
-        </dd>
+    <h1 class="h1-subcategories">Detalhes sobre o fabricante</h1>
+    <dl>
+        <div class="details-list">
+            <dt class="dt-item col-sm-6">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="dt-item col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-6">
+                @Html.DisplayNameFor(model => model.Cnpj)
+            </dt>
+            <dd class="dt-item col-sm-10">
+                @Html.DisplayFor(model => model.Cnpj)
+            </dd>
+        </div>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary button-size">Editar</a>
+        <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
+    </div>
 </div>
