--- a/Lends/Views/Producers/Details.cshtml
+++ b/Lends/Views/Producers/Details.cshtml
@@ -7,20 +7,20 @@
 <div class="jumbotron jumbotron-form">
 
     <h1 class="h1-subcategories">Detalhes sobre o fabricante</h1>
-    <dl>
+    <dl class="dl-style">
         <div class="details-list">
-            <dt class="dt-item col-sm-6">
+            <dt class="dt-item col-sm-2 dt-item-key">
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
-            <dd class="dt-item col-sm-10">
+            <dd class="dt-item col-sm-2">
                 @Html.DisplayFor(model => model.Name)
             </dd>
         </div>
         <div class="details-list">
-            <dt class="dt-item col-sm-6">
+            <dt class="dt-item col-sm-2 dt-item-key">
                 @Html.DisplayNameFor(model => model.Cnpj)
             </dt>
-            <dd class="dt-item col-sm-10">
+            <dd class="dt-item col-sm-2">
                 @Html.DisplayFor(model => model.Cnpj)
             </dd>
         </div>
