--- a/Lends/Views/Games/Index.cshtml
+++ b/Lends/Views/Games/Index.cshtml
@@ -5,76 +5,84 @@
     ViewData["Title"] = "Jogos";
 }
 
-<h1>Jogos</h1>
+<div class="jumbotron">
+    <h1 class="h1-subcategories">Jogos</h1>
 
-<p>
-    <a asp-action="Create">Adicionar novo jogo</a>
-</p>
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
+    <div class="games-buttons">
         <p>
-            <select name="statusSearch">
-                <option value="" disabled selected>Status</option>
-                @foreach (var item in @Html.GetEnumSelectList<GameStatus>()){
-                    <option value=@item.Value>@item.Text</option>
-                    }
-            </select>
-            <input type="submit" value="Buscar" class="btn btn-default" /> |
-            <a asp-action="Index">Listar todos os jogos</a>
+            <a asp-action="Create" class="btn btn-primary add-producer">Adicionar novo jogo</a>
         </p>
+        <form asp-action="Index" method="get" class="form-buttons-separator">
+            <div class="form-actions no-color">
+                <p>
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <button type="button" class="btn btn-danger">Status</button>
+                        <div class="btn-group" role="group">
+                            <button id="btnGroupDrop4" type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop4" style="" name="statusSearch">
+                                @foreach (var item in @Html.GetEnumSelectList<GameStatus>()){
+                                    <a class="dropdown-item" href="Games?statusSearch=@item.Value" type="submit" value=@item.Value>@item.Text</a>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                    <a asp-action="Index" class="btn btn-link clean-filter">Limpar filtro</a>
+                </p>
+            </div>
+        </form>
     </div>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Producer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RentPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Producer.Name)
-            </td>
-            <td>
-                R$ @Html.DisplayFor(modelItem => item.RentPrice)
-            </td>
-            <td>
-                <img src="@item.Image" width="50px" class="detailImage" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th scope ="col">
+                    @Html.DisplayNameFor(model => model.Category)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.Producer)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.RentPrice)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.Image)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Producer.Name)
+                </td>
+                <td>
+                    R$ @Html.DisplayFor(modelItem => item.RentPrice)
+                </td>
+                <td>
+                    <img src="@item.Image" width="50px" class="detailImage" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary button-size">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-warning button-size">Detalhes</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger button-size">Deletar</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
