--- a/Lends/Views/Clients/Details.cshtml
+++ b/Lends/Views/Clients/Details.cshtml
@@ -4,111 +4,126 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Client</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cellphone)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cellphone)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cpf)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cpf)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RegistrationDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.RegistrationDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Address.ZipCode)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address.Number)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Address.Number)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Address.AdditionalInformation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Address.AdditionalInformation)
-        </dd>
+<div class="jumbotron jumbotron-form">
+    <h1 class="h1-subcategories">Detalhes sobre o cliente</h1>
+    <dl class="dl-style">
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Cellphone)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Cellphone)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Cpf)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Cpf)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.RegistrationDate)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.RegistrationDate)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Address)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Address.ZipCode)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Address.Number)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Address.Number)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Address.AdditionalInformation)
+            </dt>
+            <dd class ="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Address.AdditionalInformation)
+            </dd>
+        </div>
     </dl>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary button-size">Editar</a>
+        <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
+    </div>
 </div>
-<h4>Histórico de aluguéis</h4>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Jogo
-            </th>
-            <th>
-                Data de Retirada
-            </th>
-            <th>
-                Data de Retorno
-            </th>
-            <th>
-                Valor
-            </th>
-            <th>
-                Status
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Rents)
-        {
+
+<div class="jumbotron jumbotron-form">
+    <h1 class="h1-subcategories">Histórico de aluguéis</h1>
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Game.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RentalDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReturnDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @{
-                        string isActive = @item.IsActive == true ? "Ativo" : "Inativo";
-                    }
-                    @isActive
-                </td>
+                <th scope="col">
+                    Jogo
+                </th>
+                <th scope="col">
+                    Data de Retirada
+                </th>
+                <th scope="col">
+                    Data de Retorno
+                </th>
+                <th scope="col">
+                    Valor
+                </th>
+                <th scope="col">
+                    Status
+                </th>
             </tr>
-        }
-    </tbody>
-</table>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Rents)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Game.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RentalDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ReturnDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        @{
+                            string isActive = @item.IsActive == true ? "Ativo" : "Inativo";
+                        }
+                        @isActive
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
