--- a/Lends/Views/Clients/Edit.cshtml
+++ b/Lends/Views/Clients/Edit.cshtml
@@ -4,62 +4,63 @@
     ViewData["Title"] = "Editar";
 }
 
-<h1>Editar cliente</h1>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Client.Id" />
-            <div class="form-group">
-                <label asp-for="Client.Name" class="control-label"></label>
-                <input asp-for="Client.Name" class="form-control" />
-                <span asp-validation-for="Client.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Email" class="control-label"></label>
-                <input asp-for="Client.Email" class="form-control" />
-                <span asp-validation-for="Client.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Cellphone" class="control-label"></label>
-                <input asp-for="Client.Cellphone" class="form-control" />
-                <span asp-validation-for="Client.Cellphone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Cpf" class="control-label"></label>
-                <input asp-for="Client.Cpf" class="form-control" />
-                <span asp-validation-for="Client.Cpf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.RegistrationDate" class="control-label"></label>
-                <input asp-for="Client.RegistrationDate" class="form-control" />
-                <span asp-validation-for="Client.RegistrationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Address.ZipCode" class="control-label"></label>
-                <input asp-for="Client.Address.ZipCode" class="form-control" />
-                <span asp-validation-for="Client.Address.ZipCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Address.Number" class="control-label"></label>
-                <input asp-for="Client.Address.Number" class="form-control" />
-                <span asp-validation-for="Client.Address.Number" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Address.AdditionalInformation" class="control-label"></label>
-                <input asp-for="Client.Address.AdditionalInformation" class="form-control" />
-                <span asp-validation-for="Client.Address.AdditionalInformation" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="jumbotron jumbotron-form">
+    <h1 class="h1-subcategories">Editar Cliente</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Client.Id" />
+                <div class="form-group">
+                    <label asp-for="Client.Name" class="control-label"></label>
+                    <input asp-for="Client.Name" class="form-control" />
+                    <span asp-validation-for="Client.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Email" class="control-label"></label>
+                    <input asp-for="Client.Email" class="form-control" />
+                    <span asp-validation-for="Client.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Cellphone" class="control-label"></label>
+                    <input asp-for="Client.Cellphone" class="form-control" />
+                    <span asp-validation-for="Client.Cellphone" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Cpf" class="control-label"></label>
+                    <input asp-for="Client.Cpf" class="form-control" />
+                    <span asp-validation-for="Client.Cpf" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.RegistrationDate" class="control-label"></label>
+                    <input asp-for="Client.RegistrationDate" class="form-control" />
+                    <span asp-validation-for="Client.RegistrationDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Address.ZipCode" class="control-label"></label>
+                    <input asp-for="Client.Address.ZipCode" class="form-control" />
+                    <span asp-validation-for="Client.Address.ZipCode" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Address.Number" class="control-label"></label>
+                    <input asp-for="Client.Address.Number" class="form-control" />
+                    <span asp-validation-for="Client.Address.Number" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Address.AdditionalInformation" class="control-label"></label>
+                    <input asp-for="Client.Address.AdditionalInformation" class="form-control" />
+                    <span asp-validation-for="Client.Address.AdditionalInformation" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Salvar" class="btn btn-primary btn-edit" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Retornar</a>
+    <div>
+        <a asp-action="Index" class="btn btn-link">Retornar</a>
+    </div>
 </div>
 
 @section Scripts {
